app/styles/app.scss
$icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
@import 'https://fonts.googleapis.com/css?family=Raleway|Oxygen';

*, *::before, *::after {
  box-sizing: border-box;
  list-style: none;
}

img {
  max-width: 100%;
}

body {
  background-color: #F5F5F1;
  font-family: 'Raleway', 'Helvetica', sans-serif;
}

ul {
  padding: 0;
  list-style-type: none;
}

.well {
  background-color: #FFFFFF;
}

.etsy-logo {
  display: inline-block;
  max-width: 100px;
  max-height: 60px;
  width: auto;
  height: auto;
}

.top-right-nav {
  display: inline-block;
  float: right;
  margin-top: 10px;
}

#top-right-sign-in {
  border: 1px solid #0192C7;
  border-radius: 3px;
  padding: 8px;
  margin-right: 10px;
}

#top-right-nav-cart {
  padding-left: 4px;
}

.cart-icon-and-text {
  position: relative;
  bottom: 13px;
  margin-left: 15px;
  margin-right: 35px;
}

.site-nav-link {
  margin-left: 15px;
  color: #77777F;
}

.site-nav-link:hover {
  color: #000000;
  text-decoration: none;
}

.top-right-nav-link {
  color: #0192C7;
  margin-left: 15px;
}

#relevance-dropdown {
  color: #0192C7;
  margin-right: 15px;
}

h4 {
  font-family: 'Oxygen', sans-serif;
  font-size: 23px;
}

.sidebar {
  font-family: 'Oxygen', sans-serif;
  font-size: 16px;
  display: inline-block;
  float: left;
  margin-bottom: 1200px;
  background-color: #FFFFFF;
  border-radius: 5px;
  color: #0192C7;
  padding: 10px;
}

.sidebar-heading {
  font-weight: 900;
  color: #000000;
  display: block;
  font-size: 18px;
  margin-bottom: 5px;
}

#custom-location {
  color: #0192C7;
}

.product-showcase-header {
  margin-bottom: 15px;
  margin-left: 15px;
}

#all-categories-link {
  color: #0192C7;
}

#sort-by-menu {
  position: relative;
  float: right;
}

.num-input {
  width: 65px;
  border-radius: 5px;
  padding: 5px;
  border: 1px solid gray;
}

#to-span {
  color: black;
}

#sq-red {
  color: red;
}

#sq-orange {
  color: orange;
}

#sq-yellow {
  color: yellow;
}

#sq-green {
  color: green;
}

#sq-blue {
  color: blue;
}

#sq-purple {
  color: purple;
}

#sq-black:hover {
  color: black;
}

#sq-white {
  color: #D3D3D3;
}

.btn-info {
  width: 100%;
  color: #000000;
  background-color: white;
  border-color: lightgray;
}

.btn-info:hover {
  color: #000000;
  background-color: white;
  border-color: gray;
}

.arrow-button {
  color: gray;
  background-color: white;
  border: 1px solid gray;
  position: relative;
  bottom: 1.5px;
}

.arrow-button:hover {
  color: black;
  background-color: lightgray;
  border: 1px solid darkgray;
}

.text-input {
  width: 420px;
  height: 35px;
  background-color: #FAFAF9;
  border-radius: 3px;
}

.text-input-button {
  position: relative;
  height: 35px;
  width: 80px;
  right: 4px;
  bottom: 1px;
  background-color: #34A8C4;
  color: #FFFFFF;
  border: none;
  border-radius: 3px;
}

.search-bar {
  display: inline-block;
}

.search-input {
  border: 1px solid lightgray;
}

a {
  text-decoration: none;
  color: #000000;
}

footer {
  z-index: 0;
  height: 15%;
  margin-bottom: 25px;
}

.footer-heading, .footer-heading-secondary {
  font-size: 16px;
  font-weight: bolder;
  display: block;
  margin-top: 20px;
  margin-bottom: 10px;
}

.footer-heading-secondary {

}

.footer-li {
  margin-top: 5px;
  font-size: 95%;
}

#lower-nav-columns {
  margin-bottom: 55px;
}

.page-nav {
  display: block;
  position: relative;
  top: 133.5px;
  font-family: 'Oxygen', sans-serif;
  font-weight: bolder;
}

.page-nav-btn {
  background-color: #FFFFFF;
  height: 40px;
  width: 35px;
  border: 1px solid lightgray;
  padding: 0;
  margin-right: -5px;
}

.page-nav-btn-current, .fake-page-nav-btn {
  display: inline-block;
  position: relative;
  top: 1px;
  background-color: #F1F1EB;
  height: 40px;
  width: 35px;
  border: 1px solid lightgray;
  padding: 10px;
  margin-right: -5px;
  text-align: center;
}

.page-nav-btn-current {
  border: 1px solid #000000;
}

.fake-page-nav-btn {
  color: lightgray;
}

.page-nav-arrow {
  width: 40px;
}

.email-signup {
  display: block;
  position: absolute;
  left: 35%;
  top: 2110px;
  text-align: center;
}

.email-signup-text {
  display: block;
  font-size: 16px;
  padding-bottom: 15px;
}

.email-input {
  width: 350px;
  height: 35px;
  border: 1px solid lightgray;
  border-radius: 3px;
}

.btn-primary {
  background-color: #34A8C4;
  color: #FFFFFF;
  border: none;
  border-radius: 3px;
}

.bottom-left {
  display: inline-block;
  float: left;
  border: 1px solid lightgray;
  background-color: #FFFFFF;
  padding: 5px;
  padding-right: 10px;
  margin-left: 25px;
  font-size: 95%;
}

.bottom-right {
  display: inline-block;
  float: right;
  padding-right: 15px;
  margin-right: 25px;
  font-size: 95%;
  font-family: 'Oxygen', sans-serif;
}

.fa-facebook-official, .fa-twitter, .fa-pinterest-p, .fa-instagram {
  padding-right: 5px;
}

#us-flag {
  width: 32px;
  height: 20px;
  border-radius: 100%;
}

#copyright-notice {
  color: gray;
  margin-right: 35px;
}

.bottom-right-link {
  padding-right: 35px;
}

.bottom-right-link-md {
  padding-right: 7px;
}

.bottom-right-btn {
  border: 1px solid lightgray;
  border-radius: 3px;
  background-color: #FFFFFF;
  padding-left: 40px;
  padding-right: 40px;
}

.handlebars-image {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.handlebars-image img {
  width: auto;
  height: auto;
}

.handlebars-product-info {
  background-color: #FFFFFF;
  border-radius: 3px;
}

.handlebars-title {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.handlebars-shop {
  color: #9A9AB3;
}

.handlebars-price {
  float: right;
  color: #78C042;
  margin-bottom: 25px;
}

